--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet"/>
     <title>React App</title>
   </head>
-  <body class="container" id="container">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+    <div class="container" id="container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
